...
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    style="@style/drawing_area_with_controls"
    android:paddingBottom="2dp">

    <app.we.go.emojidraw.widget.DrawingView
        android:id="@+id/drawingArea"
        android:layout_width="@dimen/drawing_area"
        android:layout_height="@dimen/drawing_area"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/drawing_area"
        app:layout_constraintEnd_toEndOf="parent"
...
        app:layout_constraintEnd_toStartOf="@+id/clearButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/clearButton" />

    <Button
        android:id="@+id/skipButton"
        style="@style/drawing_control_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        app:layout_constraintBottom_toBottomOf="@+id/clearButton"
        app:layout_constraintEnd_toEndOf="parent"
...
